--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,11 @@ environment:
 dependencies:
   url_launcher: ^6.2.1
   table_calendar: ^3.0.9
+  firebase_core: ^2.10.0
+  firebase_auth: ^4.6.3
+  # firebase_core: ^2.16.0
+  # firebase_auth: ^4.16.0
+  # google_sign_in: ^6.1.5
 
   
   flutter:
