--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -1,34 +1,1 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<plist version="1.0">
-<dict>
-	<key>CLIENT_ID</key>
-	<string>679610273050-jhksi3pddt3n0qm90q076haabi8d1qla.apps.googleusercontent.com</string>
-	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.679610273050-jhksi3pddt3n0qm90q076haabi8d1qla</string>
-	<key>API_KEY</key>
-	<string>AIzaSyC9-I3ChKznCxbYwGrN4KvZ_fOa7IoYoO0</string>
-	<key>GCM_SENDER_ID</key>
-	<string>679610273050</string>
-	<key>PLIST_VERSION</key>
-	<string>1</string>
-	<key>BUNDLE_ID</key>
-	<string>com.example.itelApp</string>
-	<key>PROJECT_ID</key>
-	<string>itel-27136</string>
-	<key>STORAGE_BUCKET</key>
-	<string>itel-27136.firebasestorage.app</string>
-	<key>IS_ADS_ENABLED</key>
-	<false></false>
-	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
-	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
-	<key>IS_GCM_ENABLED</key>
-	<true></true>
-	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
-	<key>GOOGLE_APP_ID</key>
-	<string>1:679610273050:ios:761c6005ac26e7df5bf0a3</string>
-</dict>
-</plist>
+//kosong
