--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   firebase_auth: ^4.6.3
   # firebase_core: ^2.16.0
   # firebase_auth: ^4.16.0
-  # google_sign_in: ^6.1.5
+  google_sign_in: ^6.1.5
 
   
   flutter:
