--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # firebase_core: ^2.16.0
   # firebase_auth: ^4.16.0
   google_sign_in: ^6.1.5
+  cloud_firestore: ^4.8.2
 
   
   flutter:
