--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ flutter:
   assets:
     - assets/images/
     - assets/images/itel-logo.png
+    - assets/data/flutter_courses.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
