--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,7 @@ app.*.map.json
 /android/app/release
 android/app/google-services.json
 ios/Runner/GoogleService-Info.plist
+
+# Firebase config files
+android/app/google-services.json
+ios/Runner/GoogleService-Info.plist
