--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # firebase_auth: ^4.16.0
   google_sign_in: ^6.1.5
   cloud_firestore: ^4.8.2
+  shared_preferences: ^2.2.0
+
 
   
   flutter:
