--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,11 @@ dependencies:
   google_sign_in: ^6.1.5
   cloud_firestore: ^4.8.2
   shared_preferences: ^2.2.0
-
+  # Xendit Payment Gateway Dependencies
+  dio: ^5.3.2  # For HTTP requests to Xendit API
+  webview_flutter: ^4.4.2  # For payment web view
+  crypto: ^3.0.3  # For generating secure signatures
+  
 
   
   flutter:
