--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   google_sign_in: ^6.1.5
   cloud_firestore: ^4.8.2
   shared_preferences: ^2.2.0
+  flutter_markdown: ^0.6.18
   # Xendit Payment Gateway Dependencies
   dio: ^5.3.2  # For HTTP requests to Xendit API
   webview_flutter: ^4.4.2  # For payment web view
