--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+16
+version: 1.0.1+17
 
 environment:
   sdk: ^3.6.2
@@ -32,6 +32,7 @@ dependencies:
   table_calendar: ^3.0.9
   firebase_core: ^2.10.0
   firebase_auth: ^4.6.3
+  firebase_messaging: ^14.6.5
   # firebase_core: ^2.16.0
   # firebase_auth: ^4.16.0
   google_sign_in: ^6.1.5
